// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoneEgresses.vue renders snapshot when multizone 1`] = `
<div>
  <div
    class="zoneegresses"
  >
    <div
      class="component-frame"
    >
      
      <div
        class="data-overview"
        data-testid="data-overview"
      >
        <div
          class="data-table-controls mb-2"
        >
          
          
          <button
            class="medium rounded primary k-button refresh-button"
            data-v-6bcbf05d=""
            type="button"
          >
            
            <!---->
            
            
            <span
              class="refresh-icon custom-control-icon"
            >
              <svg
                viewBox="0 0 36 36"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="#fff"
                  fill-rule="nonzero"
                >
                  <path
                    d="M18 5.5a12.465 12.465 0 00-8.118 2.995 1.5 1.5 0 001.847 2.363l.115-.095A9.437 9.437 0 0118 8.5l.272.004a9.487 9.487 0 019.07 7.75l.04.246H25a.5.5 0 00-.416.777l4 6a.5.5 0 00.832 0l4-6 .04-.072A.5.5 0 0033 16.5h-2.601l-.017-.15C29.567 10.2 24.294 5.5 18 5.5zM2.584 18.723l-.04.072A.5.5 0 003 19.5h2.6l.018.15C6.433 25.8 11.706 30.5 18 30.5c3.013 0 5.873-1.076 8.118-2.995a1.5 1.5 0 00-1.847-2.363l-.115.095A9.437 9.437 0 0118 27.5l-.272-.004a9.487 9.487 0 01-9.07-7.75l-.041-.246H11a.5.5 0 00.416-.777l-4-6a.5.5 0 00-.832 0l-4 6z"
                  />
                </g>
              </svg>
            </span>
            <span>
              Refresh
            </span>
            
            <!---->
          </button>
        </div>
        <div
          class="data-overview-content"
        >
          <!-- data -->
          <div
            class="data-overview-table"
          >
            <div
              class=""
              data-testid="data-overview-table"
              data-v-222fefa6=""
              is-clickable=""
            >
              <section
                class="k-table-wrapper"
                data-v-222fefa6=""
              >
                <table
                  class="has-hover is-clickable k-table"
                  data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                  data-v-222fefa6=""
                >
                  <thead
                    class=""
                    data-v-222fefa6=""
                  >
                    <tr
                      class=""
                      data-v-222fefa6=""
                    >
                      
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class="sr-only"
                            data-v-222fefa6=""
                          >
                            actions
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class=""
                            data-v-222fefa6=""
                          >
                            Status
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class=""
                            data-v-222fefa6=""
                          >
                            Name
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      
                    </tr>
                  </thead>
                  <tbody
                    data-v-222fefa6=""
                  >
                    
                    <tr
                      class="is-selected"
                      data-v-222fefa6=""
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        <div
                          class="entity-status"
                        >
                          <span
                            class="entity-status__dot"
                          />
                          <span
                            class="entity-status__label"
                          >
                            Online
                          </span>
                        </div>
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        
                        zoneegress-1
                        
                        
                      </td>
                      
                    </tr>
                    
                  </tbody>
                </table>
                <!---->
              </section>
            </div>
            <div
              class="pagination"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <div
        class="tab-container"
        data-testid="tab-container"
      >
        <header
          class="tab__header"
        >
          
          <div>
            <h3>
               Zone Egress: zoneegress-1
            </h3>
          </div>
          <div>
            <div
              data-testid="entity-url-control"
            >
              
              <div
                aria-controls="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                data-v-814c880a=""
                id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                role="button"
              >
                
                <button
                  class="small rounded outline k-button"
                  data-v-6bcbf05d=""
                  type="button"
                >
                  
                  <span
                    class="k-button-icon kong-icon-copy kong-icon"
                    data-v-6bcbf05d=""
                    data-v-71cfcfc4=""
                  >
                    <svg
                      height="16"
                      role="img"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      
  
                      <title>
                        Copy
                      </title>
                      
  
                      <path
                        d="M25.313 28v-18.688h-14.625v18.688h14.625zM25.313 6.688c1.438 0 2.688 1.188 2.688 2.625v18.688c0 1.438-1.25 2.688-2.688 2.688h-14.625c-1.438 0-2.688-1.25-2.688-2.688v-18.688c0-1.438 1.25-2.625 2.688-2.625h14.625zM21.313 1.313v2.688h-16v18.688h-2.625v-18.688c0-1.438 1.188-2.688 2.625-2.688h16z"
                        fill="var(--KButtonOutlineColor, var(--blue-500, color(blue-500)))"
                      />
                      

                    </svg>
                    

                  </span>
                  
                  
                   Copy URL 
                  
                  <!---->
                </button>
                
                <transition-stub
                  appear="false"
                  css="true"
                  data-v-814c880a=""
                  name="fade"
                  persisted="false"
                >
                  <div
                    class="k-popover"
                    data-v-814c880a=""
                    id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    role="region"
                    style="width: 200px; max-width: 350px; max-height: auto; display: none;"
                  >
                    <!---->
                    <div
                      class="k-popover-content"
                      data-v-814c880a=""
                    >
                      
                      <p>
                        URL copied to clipboard!
                      </p>
                      
                    </div>
                    <!---->
                  </div>
                </transition-stub>
              </div>
              
            </div>
          </div>
          
        </header>
        <div
          class="tab__content-container"
        >
          <div
            class="k-tabs"
            data-v-b0b5f6ae=""
          >
            <ul
              aria-label="Tabs"
              data-v-b0b5f6ae=""
              role="tablist"
            >
              
              <li
                aria-controls="panel-0"
                aria-selected="true"
                class="active tab-item"
                data-v-b0b5f6ae=""
                id="overview-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  Overview
                  
                </a>
              </li>
              <li
                aria-controls="panel-1"
                aria-selected="false"
                class="tab-item"
                data-v-b0b5f6ae=""
                id="insights-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  Zone Egress Insights
                  
                </a>
              </li>
              <li
                aria-controls="panel-2"
                aria-selected="false"
                class="tab-item"
                data-v-b0b5f6ae=""
                id="xds-configuration-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  XDS Configuration
                  
                </a>
              </li>
              <li
                aria-controls="panel-3"
                aria-selected="false"
                class="tab-item"
                data-v-b0b5f6ae=""
                id="envoy-stats-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  Stats
                  
                </a>
              </li>
              <li
                aria-controls="panel-4"
                aria-selected="false"
                class="tab-item"
                data-v-b0b5f6ae=""
                id="envoy-clusters-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  Clusters
                  
                </a>
              </li>
              
            </ul>
            
            <div
              aria-labelledby="overview-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-0"
              role="tabpanel"
              tabindex="0"
            >
              
              
              <div>
                <div
                  class="label-list-content"
                >
                  <section
                    aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    class="noBorder kong-card"
                    data-v-1f0d90ac=""
                  >
                    <!---->
                    <!---->
                    <div
                      class="k-card-content d-flex"
                      data-v-1f0d90ac=""
                    >
                      <div
                        class="k-card-body"
                        data-v-1f0d90ac=""
                        id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                      >
                        
                        <div
                          class="label-list__col-wrapper multi-col"
                        >
                          
                          <div>
                            <ul>
                              
                              <li>
                                <h4>
                                  type
                                </h4>
                                <p>
                                  ZoneEgressOverview
                                </p>
                              </li>
                              <li>
                                <h4>
                                  name
                                </h4>
                                <p>
                                  zoneegress-1
                                </p>
                              </li>
                              
                            </ul>
                          </div>
                          
                        </div>
                        
                      </div>
                      <!---->
                    </div>
                  </section>
                </div>
              </div>
              
              
            </div>
            <div
              aria-labelledby="insights-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-1"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="xds-configuration-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-2"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-stats-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-3"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-clusters-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-4"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            
          </div>
          <div>
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`ZoneEgresses.vue renders snapshot when no multizone 1`] = `
<div>
  <div
    class="zoneegresses"
  >
    <div
      class="component-frame"
    >
      
      <div
        class="data-overview"
        data-testid="data-overview"
      >
        <div
          class="data-table-controls mb-2"
        >
          
          
          <button
            class="medium rounded primary k-button refresh-button"
            data-v-6bcbf05d=""
            type="button"
          >
            
            <!---->
            
            
            <span
              class="refresh-icon custom-control-icon"
            >
              <svg
                viewBox="0 0 36 36"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="#fff"
                  fill-rule="nonzero"
                >
                  <path
                    d="M18 5.5a12.465 12.465 0 00-8.118 2.995 1.5 1.5 0 001.847 2.363l.115-.095A9.437 9.437 0 0118 8.5l.272.004a9.487 9.487 0 019.07 7.75l.04.246H25a.5.5 0 00-.416.777l4 6a.5.5 0 00.832 0l4-6 .04-.072A.5.5 0 0033 16.5h-2.601l-.017-.15C29.567 10.2 24.294 5.5 18 5.5zM2.584 18.723l-.04.072A.5.5 0 003 19.5h2.6l.018.15C6.433 25.8 11.706 30.5 18 30.5c3.013 0 5.873-1.076 8.118-2.995a1.5 1.5 0 00-1.847-2.363l-.115.095A9.437 9.437 0 0118 27.5l-.272-.004a9.487 9.487 0 01-9.07-7.75l-.041-.246H11a.5.5 0 00.416-.777l-4-6a.5.5 0 00-.832 0l-4 6z"
                  />
                </g>
              </svg>
            </span>
            <span>
              Refresh
            </span>
            
            <!---->
          </button>
        </div>
        <div
          class="data-overview-content"
        >
          <!-- data -->
          <div
            class="data-overview-table"
          >
            <div
              class=""
              data-testid="data-overview-table"
              data-v-222fefa6=""
              is-clickable=""
            >
              <section
                class="k-table-wrapper"
                data-v-222fefa6=""
              >
                <table
                  class="has-hover is-clickable k-table"
                  data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                  data-v-222fefa6=""
                >
                  <thead
                    class=""
                    data-v-222fefa6=""
                  >
                    <tr
                      class=""
                      data-v-222fefa6=""
                    >
                      
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class="sr-only"
                            data-v-222fefa6=""
                          >
                            actions
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class=""
                            data-v-222fefa6=""
                          >
                            Status
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class=""
                            data-v-222fefa6=""
                          >
                            Name
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      
                    </tr>
                  </thead>
                  <tbody
                    data-v-222fefa6=""
                  >
                    
                    <tr
                      class="is-selected"
                      data-v-222fefa6=""
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        <div
                          class="entity-status"
                        >
                          <span
                            class="entity-status__dot"
                          />
                          <span
                            class="entity-status__label"
                          >
                            Online
                          </span>
                        </div>
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        
                        zoneegress-1
                        
                        
                      </td>
                      
                    </tr>
                    
                  </tbody>
                </table>
                <!---->
              </section>
            </div>
            <div
              class="pagination"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <div
        class="tab-container"
        data-testid="tab-container"
      >
        <header
          class="tab__header"
        >
          
          <div>
            <h3>
               Zone Egress: zoneegress-1
            </h3>
          </div>
          <div>
            <div
              data-testid="entity-url-control"
            >
              
              <div
                aria-controls="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                data-v-814c880a=""
                id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                role="button"
              >
                
                <button
                  class="small rounded outline k-button"
                  data-v-6bcbf05d=""
                  type="button"
                >
                  
                  <span
                    class="k-button-icon kong-icon-copy kong-icon"
                    data-v-6bcbf05d=""
                    data-v-71cfcfc4=""
                  >
                    <svg
                      height="16"
                      role="img"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      
  
                      <title>
                        Copy
                      </title>
                      
  
                      <path
                        d="M25.313 28v-18.688h-14.625v18.688h14.625zM25.313 6.688c1.438 0 2.688 1.188 2.688 2.625v18.688c0 1.438-1.25 2.688-2.688 2.688h-14.625c-1.438 0-2.688-1.25-2.688-2.688v-18.688c0-1.438 1.25-2.625 2.688-2.625h14.625zM21.313 1.313v2.688h-16v18.688h-2.625v-18.688c0-1.438 1.188-2.688 2.625-2.688h16z"
                        fill="var(--KButtonOutlineColor, var(--blue-500, color(blue-500)))"
                      />
                      

                    </svg>
                    

                  </span>
                  
                  
                   Copy URL 
                  
                  <!---->
                </button>
                
                <transition-stub
                  appear="false"
                  css="true"
                  data-v-814c880a=""
                  name="fade"
                  persisted="false"
                >
                  <div
                    class="k-popover"
                    data-v-814c880a=""
                    id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    role="region"
                    style="width: 200px; max-width: 350px; max-height: auto; display: none;"
                  >
                    <!---->
                    <div
                      class="k-popover-content"
                      data-v-814c880a=""
                    >
                      
                      <p>
                        URL copied to clipboard!
                      </p>
                      
                    </div>
                    <!---->
                  </div>
                </transition-stub>
              </div>
              
            </div>
          </div>
          
        </header>
        <div
          class="tab__content-container"
        >
          <div
            class="k-tabs"
            data-v-b0b5f6ae=""
          >
            <ul
              aria-label="Tabs"
              data-v-b0b5f6ae=""
              role="tablist"
            >
              
              <li
                aria-controls="panel-0"
                aria-selected="true"
                class="active tab-item"
                data-v-b0b5f6ae=""
                id="overview-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  Overview
                  
                </a>
              </li>
              <li
                aria-controls="panel-1"
                aria-selected="false"
                class="tab-item"
                data-v-b0b5f6ae=""
                id="insights-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  Zone Egress Insights
                  
                </a>
              </li>
              <li
                aria-controls="panel-2"
                aria-selected="false"
                class="tab-item"
                data-v-b0b5f6ae=""
                id="xds-configuration-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  XDS Configuration
                  
                </a>
              </li>
              <li
                aria-controls="panel-3"
                aria-selected="false"
                class="tab-item"
                data-v-b0b5f6ae=""
                id="envoy-stats-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  Stats
                  
                </a>
              </li>
              <li
                aria-controls="panel-4"
                aria-selected="false"
                class="tab-item"
                data-v-b0b5f6ae=""
                id="envoy-clusters-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  Clusters
                  
                </a>
              </li>
              
            </ul>
            
            <div
              aria-labelledby="overview-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-0"
              role="tabpanel"
              tabindex="0"
            >
              
              
              <div>
                <div
                  class="label-list-content"
                >
                  <section
                    aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    class="noBorder kong-card"
                    data-v-1f0d90ac=""
                  >
                    <!---->
                    <!---->
                    <div
                      class="k-card-content d-flex"
                      data-v-1f0d90ac=""
                    >
                      <div
                        class="k-card-body"
                        data-v-1f0d90ac=""
                        id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                      >
                        
                        <div
                          class="label-list__col-wrapper multi-col"
                        >
                          
                          <div>
                            <ul>
                              
                              <li>
                                <h4>
                                  type
                                </h4>
                                <p>
                                  ZoneEgressOverview
                                </p>
                              </li>
                              <li>
                                <h4>
                                  name
                                </h4>
                                <p>
                                  zoneegress-1
                                </p>
                              </li>
                              
                            </ul>
                          </div>
                          
                        </div>
                        
                      </div>
                      <!---->
                    </div>
                  </section>
                </div>
              </div>
              
              
            </div>
            <div
              aria-labelledby="insights-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-1"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="xds-configuration-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-2"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-stats-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-3"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-clusters-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-4"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            
          </div>
          <div>
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`ZoneEgresses.vue renders zoneegress insights 1`] = `
<div
  class="tab-container"
  data-testid="tab-container"
>
  <header
    class="tab__header"
  >
    
    <div>
      <h3>
         Zone Egress: zoneegress-1
      </h3>
    </div>
    <div>
      <div
        data-testid="entity-url-control"
      >
        
        <div
          aria-controls="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          data-v-814c880a=""
          id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          role="button"
        >
          
          <button
            class="small rounded outline k-button"
            data-v-6bcbf05d=""
            type="button"
          >
            
            <span
              class="k-button-icon kong-icon-copy kong-icon"
              data-v-6bcbf05d=""
              data-v-71cfcfc4=""
            >
              <svg
                height="16"
                role="img"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                
  
                <title>
                  Copy
                </title>
                
  
                <path
                  d="M25.313 28v-18.688h-14.625v18.688h14.625zM25.313 6.688c1.438 0 2.688 1.188 2.688 2.625v18.688c0 1.438-1.25 2.688-2.688 2.688h-14.625c-1.438 0-2.688-1.25-2.688-2.688v-18.688c0-1.438 1.25-2.625 2.688-2.625h14.625zM21.313 1.313v2.688h-16v18.688h-2.625v-18.688c0-1.438 1.188-2.688 2.625-2.688h16z"
                  fill="var(--KButtonOutlineColor, var(--blue-500, color(blue-500)))"
                />
                

              </svg>
              

            </span>
            
            
             Copy URL 
            
            <!---->
          </button>
          
          <transition-stub
            appear="false"
            css="true"
            data-v-814c880a=""
            name="fade"
            persisted="false"
          >
            <div
              class="k-popover"
              data-v-814c880a=""
              id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
              role="region"
              style="width: 200px; max-width: 350px; max-height: auto; display: none;"
            >
              <!---->
              <div
                class="k-popover-content"
                data-v-814c880a=""
              >
                
                <p>
                  URL copied to clipboard!
                </p>
                
              </div>
              <!---->
            </div>
          </transition-stub>
        </div>
        
      </div>
    </div>
    
  </header>
  <div
    class="tab__content-container"
  >
    <div
      class="k-tabs"
      data-v-b0b5f6ae=""
    >
      <ul
        aria-label="Tabs"
        data-v-b0b5f6ae=""
        role="tablist"
      >
        
        <li
          aria-controls="panel-0"
          aria-selected="false"
          class="tab-item"
          data-v-b0b5f6ae=""
          id="overview-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-b0b5f6ae=""
          >
            
            Overview
            
          </a>
        </li>
        <li
          aria-controls="panel-1"
          aria-selected="true"
          class="active tab-item"
          data-v-b0b5f6ae=""
          id="insights-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-b0b5f6ae=""
          >
            
            Zone Egress Insights
            
          </a>
        </li>
        <li
          aria-controls="panel-2"
          aria-selected="false"
          class="tab-item"
          data-v-b0b5f6ae=""
          id="xds-configuration-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-b0b5f6ae=""
          >
            
            XDS Configuration
            
          </a>
        </li>
        <li
          aria-controls="panel-3"
          aria-selected="false"
          class="tab-item"
          data-v-b0b5f6ae=""
          id="envoy-stats-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-b0b5f6ae=""
          >
            
            Stats
            
          </a>
        </li>
        <li
          aria-controls="panel-4"
          aria-selected="false"
          class="tab-item"
          data-v-b0b5f6ae=""
          id="envoy-clusters-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-b0b5f6ae=""
          >
            
            Clusters
            
          </a>
        </li>
        
      </ul>
      
      <div
        aria-labelledby="overview-tab"
        class="tab-container"
        data-v-b0b5f6ae=""
        id="panel-0"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="insights-tab"
        class="tab-container"
        data-v-b0b5f6ae=""
        id="panel-1"
        role="tabpanel"
        tabindex="0"
      >
        
        
        <section
          aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          class="noBorder kong-card"
          data-v-1f0d90ac=""
        >
          <!---->
          <!---->
          <div
            class="k-card-content d-flex"
            data-v-1f0d90ac=""
          >
            <div
              class="k-card-body"
              data-v-1f0d90ac=""
              id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
            >
              
              <ul
                class="accordion"
              >
                
                
                <li
                  class="accordion-item relative border-b py-2 active"
                >
                  <button
                    aria-expanded="true"
                    class="accordion-item-header"
                  >
                    <!-- This slot will display header -->
                    
                    <h4
                      class="text-lg font-medium"
                    >
                      <span
                        class="color-green-400"
                      >
                         Connect time: 2021-07-13T08:41:04.556796688Z
                      </span>
                      <!--v-if-->
                    </h4>
                    
                  </button>
                  <transition-stub
                    appear="false"
                    css="true"
                    name="accordion"
                    persisted="false"
                  >
                    <div
                      class="px-4"
                    >
                      <!-- This slot will display whole content -->
                      
                      <div>
                        <div>
                          <h5
                            class="overview-tertiary-title"
                          >
                             General Information: 
                          </h5>
                          <ul>
                            <!--v-if-->
                            <li>
                              <strong>
                                Control Plane Instance ID:
                              </strong>
                                
                              <span
                                class="mono"
                              >
                                kuma-control-plane-84f5589874-nmspq-0867
                              </span>
                            </li>
                            <li>
                              <strong>
                                Last Connected:
                              </strong>
                                2021-07-13T08:41:04.556796688Z
                            </li>
                            <!--v-if-->
                          </ul>
                        </div>
                        <div>
                          <ul
                            class="overview-stat-grid"
                          >
                            
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Cds: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Eds: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    2
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Lds: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Rds: 
                              </h6>
                              <ul>
                                
                                
                              </ul>
                            </li>
                            
                          </ul>
                        </div>
                      </div>
                      
                    </div>
                  </transition-stub>
                </li>
                
                
              </ul>
              
            </div>
            <!---->
          </div>
        </section>
        
        
      </div>
      <div
        aria-labelledby="xds-configuration-tab"
        class="tab-container"
        data-v-b0b5f6ae=""
        id="panel-2"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="envoy-stats-tab"
        class="tab-container"
        data-v-b0b5f6ae=""
        id="panel-3"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="envoy-clusters-tab"
        class="tab-container"
        data-v-b0b5f6ae=""
        id="panel-4"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      
    </div>
    <div>
      <!--v-if-->
    </div>
  </div>
</div>
`;
